# TeensyStepperHexaPod

./: Experiments.md  README.md
FrameGrabber/: .gitignore  CMakeLists.txt  README.md  build.bat
FrameGrabber/src/: main.cpp
Microcontroller/: README.md
Microcontroller/include/: Constants.h  LinearStepper.h  LinearStepperController.h  MoveBatch.h  SineStepper.h  SineStepperController.h
Microcontroller/src/: LinearStepper.cpp  LinearStepperController.cpp  MoveBatch.cpp  SineStepper.cpp  SineStepperController.cpp  main.cpp
UVCCameraPlugin/: .gitignore  README.md  UVCCameraPlugin.cpp  UVCCameraPlugin.h  build.bat
Unity/MachineSimulator/: .gitignore  ballpositionlogs.txt  ballpositionlogs_0.txt  ballpositionlogs_1.txt
Unity/MachineSimulator/Assets/MachineSimulator/: Constants.cs  TODO.cs
Unity/MachineSimulator/Assets/MachineSimulator/Application/: ApplicationSettings.cs
Unity/MachineSimulator/Assets/MachineSimulator/Controlling/: Controller.cs  IBallPositionProvider.cs  PID.cs
Unity/MachineSimulator/Assets/MachineSimulator/IK/: IkTest.cs  SphereCircleIntersectIK.cs  Target.mat
Unity/MachineSimulator/Assets/UI Toolkit/: PanelSettings.asset
Unity/MachineSimulator/Assets/UniversalJointCheck/: TODO.cs
Unity/MachineSimulator/ProjectSettings/: ProjectSettings.asset  QualitySettings.asset  TagManager.asset
Unity/UniversalJointCheck/Assets/: Transparent.mat
Unity/UniversalJointCheck/Assets/IK/: IkTest.cs
Unity/UniversalJointCheck/Assets/MachineModel/: SingleArmMover.cs
Unity/UniversalJointCheck/Assets/Scenes/: SampleScene.unity
Unity/UniversalJointCheck/Assets/UniversalJointCheck/: TODO.cs  Transparent2.mat
(+90 files in other folders)
